--- a/src/components/App.css
+++ b/src/components/App.css
@@ -2,9 +2,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     width: 50%;
     height: 100%;
+    min-height: 80vh;
     border: 2px solid blue;
     margin: 1em;
     border-radius: 15px;
@@ -42,6 +42,6 @@
     width: 100%;
     background-color:rgba( 245, 243, 240, 1);
     border-radius: 15px;
-    height: 50vh;
     margin: 2em;
 }
+
